Fixed about button mobile scaling

--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -21,6 +21,7 @@
 .input {
   display: flex;
   flex-direction: row;
+  min-width: 300px;
 }
 
 .text textarea {
@@ -53,4 +54,12 @@
 .button:active {
   transform: translateY(4px);
   transition: 60ms transform ease-in-out;
+}
+
+@media screen and (max-width: 600px) {
+  .input button {
+    margin: 0 0 0 0 !important;
+    float: left;
+  }
+
 }
